# wwon-application

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 0f33841c8654_ajust_name_migration.py  1e25a0bfd612_initial_migration.py  4dc9db82feac_initial_migration.py  5980dce820c0_ajust_is_superuser_default_column_to_.py  73c730439cc9_ajust_migration.py  79a61c852b39_ajust_is_superuser_column_to_user_model.py  90f297e15fe1_ajust_users_model.py  e05fc39f1158_add_blacklist_model.py  e468e3c8b542_ajust_pin_users_model.py
app/: main.py
app/api/v1/: dependencies.py  router.py
app/api/v1/auth/: auth_controller.py  auth_repository.py  auth_schemas.py  auth_service.py
app/api/v1/items/: item_controller.py  item_schemas.py  item_service.py
app/api/v1/users/: user_controller.py  user_repository.py  user_schemas.py  user_service.py
app/core/: config.py  mailer.py  security.py
app/database/: session.py
app/database/models/: blacklist.py  item.py  user.py
app/db/models/: blacklist.py  item.py  user.py
app/middleware/: dependencies.py
app/tests/: test_auth.py  test_users.py
tests/: conftest.py
tests/integration/: test_auth.py  test_users.py
