[tool.poetry]
name = "erp-backend"
version = "0.1.0"
description = "Microserviço destinado a manipulação dos dados tomadores e prestadores"
authors = ["ramonhveloso <ramon.veloso@inovebanco.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.35"
pydantic = "^2.9.2"
passlib = "^1.7.4"
jose = "^1.0.0"
python-jose = "^3.3.0"
pre-commit = "^3.8.0"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
